# hello_world

./: .gitignore  .travis.yml  CMakeLists.txt  get_version.h  main  main.cpp  test_version.cpp
